--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,39 @@
-version: '2'
+version: '3'
+
+networks:
+  default:
+    driver: bridge
+
 services:
   php:
     image: yiisoftware/yii2-php:7.4-apache
     volumes:
       - ~/.composer-docker/cache:/root/.composer/cache:delegated
       - ./:/app:delegated
+      - ./docker/php/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
+      - ./docker/apache/000-default.conf:/etc/apache2/sites-available/000-default.conf
+    environment:
+      - PHP_ENABLE_XDEBUG=1
+      - PHP_IDE_CONFIG=serverName=MyTestServer
     ports:
-      - '8000:80'
+      - '80:80'
+    networks:
+      - default
+    depends_on:
+      - db
+  db:
+    image: mariadb:10.5.8
+    restart: always
+    environment:
+      - MYSQL_DATABASE=my_database_name
+      - MYSQL_USER=my_user_name
+      - MYSQL_PASSWORD=my_user_password
+      - MYSQL_ROOT_PASSWORD=my_root_password
+    ports:
+      - '3306:3306'
+    expose:
+      - '3306'
+    volumes:
+      - "./docker/mysql:/var/lib/mysql"
+    networks:
+      - default
