some changes in env and some bugfixes

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,12 @@
             "enabled": false
         }
     },
+     "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ],
     "scripts": {
         "post-install-cmd": [
             "yii\\composer\\Installer::postInstall"
