--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
         "yiisoft/yii2-symfonymailer": "~2.0.3",
-        "nesbot/carbon": "2.x-dev"
+        "nesbot/carbon": "2.x-dev",
+        "league/csv": "^9.8.0",
+        "spatie/data-transfer-object": "v2.x-dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
